<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_exit"
        android:title="Exit"
        android:icon="@drawable/ic_action_exit_to_app"
        app:showAsAction="always" />

</menu>