<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.info.InfoActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_data_attendance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/view_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="No Data"
        android:textSize="30sp"
        android:visibility="gone"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/qr_code_white"
        app:layout_anchor="@id/recycler_data_attendance"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>